# SecureAIApp

./: README.md
backend/: database.db  pyproject.toml
backend/src/: .env  app.py
backend/src/database/: db.py
backend/src/routes/: challenge.py
frontend/: package-lock.json
